fixed the auth flow but still get 500 from server

--- a/html/verify_email.html
+++ b/html/verify_email.html
@@ -49,7 +49,7 @@
           if (data.status === 'success') {
             alert('Email verified successfully!');
             // Redirect to the dashboard or login page
-            window.location.href = 'dashboard.html';
+            window.location.href = '/home';
           } else {
             alert('Error: ' + (data.message || 'Unable to verify email.'));
           }
