--- a/public/html/register_2.html
+++ b/public/html/register_2.html
@@ -7,103 +7,7 @@
     <title>Interests and Personality</title>
 </head>
 <body>
-    <style>
-        body, html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: Arial, sans-serif;
-    background: url('../static/imgs/register-bg-2.jpeg') no-repeat center center fixed;
-    background-size: cover;
-    color: white;
-}
-.container {
-    background: rgba(0, 0, 0, 0.6);
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-    width: 60%;
-    height: 65%;
-    overflow-y: auto;
-}
-h1 {
-    font-size: 50px;
-    margin-bottom: 10px;
-}
-p {
-    font-size: 25px;
-    margin-bottom: 20px;
-}
-.tags {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-.tag {
-    background: transparent;
-    border-radius: 40px;
-    padding: 10px 70px;
-    margin: 5px;
-    border: 1px solid white;
-    cursor: pointer;
-    font-size: 25px;
-    transition: background 0.3s;
-}
-.tag.selected {
-    background: #3949ab;
-    color: white;
-}
-.actions {
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-between;
-}
-.actions button {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-}
-.skip {
-    background: transparent;
-    color: white;
-}
-.finish {
-    background: #3949ab;
-    color: white;
-}
-@media screen and (max-width: 500px) {
-    .container {
-        width: 95%;
-        height: auto;
-        padding: 15px;
-    }
-    h1 {
-        font-size: 28px;
-    }
-    p {
-        font-size: 16px;
-    }
-    .tag {
-        padding: 8px 30px;
-        font-size: 16px;
-    }
-    .actions {
-        flex-direction: column;
-    }
-    .actions button {
-        width: 100%;
-        margin-bottom: 10px;
-        font-size: 14px;
-        padding: 10px;
-    }
-}
-
-    </style>
+ 
     <div class="container">
         <h1>Great!! You're just one step away</h1>
         <p>Tell us about your hobbies & interests & personality...</p>
@@ -143,43 +47,47 @@ p {
         });
 
         async function submitSelection() {
-            const selectedTags = [];
-            document.querySelectorAll('.tag.selected').forEach(tag => {
-                selectedTags.push(tag.innerText);
-            });
+    const selectedTags = [];
+    document.querySelectorAll('.tag.selected').forEach(tag => {
+        selectedTags.push(tag.innerText);
+    });
 
-            if (selectedTags.length === 0) {
-                alert('Please select at least one interest or personality trait.');
-                return;
+    if (selectedTags.length === 0) {
+        alert('Please select at least one interest or personality trait.');
+        return;
+    }
+
+    const registrationData = JSON.parse(sessionStorage.getItem('registrationData')) || {};
+    registrationData.listOfInterest = selectedTags;
+
+    console.log('Submitting data:', registrationData);
+
+    try {
+        const response = await fetch('/api/auth/register', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(registrationData)
+        });
+
+        const data = await response.json();
+
+        if (response.status === 201) {
+            // Save email to local storage if it's not already saved
+            if (!localStorage.getItem('email')) {
+                localStorage.setItem('email', registrationData.email);
             }
-
-            const registrationData = JSON.parse(sessionStorage.getItem('registrationData')) || {};
-            registrationData.listOfInterest = selectedTags;
-
-            console.log('Submitting data:', registrationData);
-
-            try {
-                const response = await fetch('/api/auth/register', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify(registrationData)
-                });
-
-                const data = await response.json();
-
-                if (response.status === 201) {
-                    window.location.href = '/verify_email';
-                } else {
-                    console.log(data);
-                    alert(data.message || 'An error occurred during registration.');
-                }
-            } catch (error) {
-                console.error('Error:', error);
-                alert('An error occurred while submitting interests.');
-            }
+            window.location.href = '/verify_email';
+        } else {
+            console.log(data);
+            alert(data.message || 'An error occurred during registration.');
         }
+    } catch (error) {
+        console.error('Error:', error);
+        alert('An error occurred while submitting interests.');
+    }
+}
     </script>
 
 </body>
