--- a/public/html/verify_email.html
+++ b/public/html/verify_email.html
@@ -59,9 +59,10 @@
               const data = await response.json();
   
               if (response.status === 201) {
-                  // Overwrite the email in local storage
-                  localStorage.setItem('email', registrationData.email);
-  
+                  // Save email to local storage if it's not already saved
+                  if (!localStorage.getItem('email')) {
+                      localStorage.setItem('email', registrationData.email);
+                  }
                   // Redirect to the login page after successful registration
                   window.location.href = '/login';
               } else {
@@ -74,6 +75,5 @@
           }
       }
   </script>
-  
   </body>
 </html>
