adding footer to user page

--- a/public/html/user_Aboutme.html
+++ b/public/html/user_Aboutme.html
@@ -9,6 +9,9 @@
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <link rel='stylesheet' href='https://unpkg.com/@yaireo/tagify/dist/tagify.css'>
     <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/newsletter-section.css">
+    <link rel="stylesheet" href="../css/home.css">
+
 </head>
 <body>
     <script>
@@ -165,7 +168,7 @@
         </section>
     </main>
 
-    <footer>
+   <!--  <footer>
         <div class="footer-section">
             <div class="footer-column">
                 <h3>About us</h3>
@@ -203,6 +206,62 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h5>About Us</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                    </div>
+                    <div class="col">
+                        <h5>Contact Us</h5>
+                        <p>Email: info@example.com</p>
+                        <p>Phone: +123 456 7890</p>
+                    </div>
+                    <div class="col">
+                 <ul>
+                     <h5>Help & Support</h5>
+                     <li><a href="#">FAQs</a></li>
+                     <li><a href="#">Customer Support</a></li>
+                     <li><a href="#">Return Policy</a></li>
+                     <li><a href="#">Report a scam</a></li>
+                 </ul>
+                    </div>
+                    <div class="col">
+                      <ul>
+                        <h5>Follow Us</h5>
+                        <li><a href="#" aria-label="Link to Twitter profile">
+                          <i class="ph-twitter-logo"></i>
+                        Twitter
+                        </a></li> 
+                        <li><a href="#" aria-label="Link to Twitter profile">
+                          <i class="ph-instagram-logo"></i>
+                        Instagram
+                        </a></li> 
+                        <li><a href="#" aria-label="Link to Twitter profile">
+                          <i class="ph-facebook-logo"></i>
+                        Facebook
+                        </a></li>
+                      </u>
+                    </div>
+                </div>
+            </div> 
+
+    <div>
+      <section class="newsletter-section">
+          <div class="newsletter-container">
+              <h2>Subscribe to Our Newsletter</h2>
+              <p>Stay updated with our latest news and offers.<br>
+              Enter your email to subscribe to our newsletter.</p>
+              <form class="newsletter-form">
+                  <input type="email" class="newsletter-input" placeholder="Enter your email" required>
+                  <button type="submit" class="newsletter-btn">Subscribe</button>
+              </form>
+          </div>
+      </section>
+    </div>
+        </footer>
+        <script src='https://unpkg.com/phosphor-icons'></script>
 </body>
 </html>
