--- a/public/html/user_Aboutme.html
+++ b/public/html/user_Aboutme.html
@@ -79,49 +79,65 @@
     </script>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand img-fluid logo-small" href="#">
-                    <img src="../static/imgs/logo.png" class="img-fluid w-50" alt="">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">HOME</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">EVENTS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">FAVORITS</a>
-                        </li>
-                    </ul>
-                    <div class="d-flex">
-                        <form class="d-flex">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        </form>
-                    </div>
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 profile-menu">
-                        <li class="nav-item dropdown">
-                            <a href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <div class="profile-icon-container">
-                                    <img src="../static/imgs/user.jpeg" alt="Profile Icon" class="profile-icon">
-                                </div>
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="user_Aboutme.html">Account</a></li>
-                                <li><a class="dropdown-item" href="#">Settings</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="login.html">Log Out</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+         <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <!-- Navbar Brand -->
+      <a class="navbar-brand img-fluid logo-small" href="home.html">
+        <img src="../static/imgs/logo.png" class="img-fluid w-50" alt="">
+      </a>
+      <!-- Toggle button for mobile -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- Navbar links and buttons -->
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="home.html">HOME</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="events.html">EVENTS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="create_event.html">CREATE EVENTS</a>
+          </li>
+        </ul>
+        <div class="d-flex">
+          <!-- Search Form -->
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          </form>
+        </div>
+        <!-- Profile icon -->
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 profile-menu">
+          <li class="nav-item dropdown">
+            <a href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <div class="profile-icon-container">
+                <img src="../static/imgs/user.jpeg" alt="Profile Icon" class="profile-icon">
+              </div>
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="margin-right: 15px;padding-right: 4px;margin-left: -19px;">
+              <li>
+                <a class="dropdown-item" href="user_Aboutme.html">
+                 Account </a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="user_Aboutme.html">
+                   Settings </a>
+              </li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li>
+                <a class="dropdown-item" href="guest_home.html">
+                  Log Out </a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
     </header>
 
     <main>
